# haruiz.github.io

./: .env  .gitignore  404.html  Courses.html  Gemfile  Posters.html  Projects.html  Publications.html  README.md  Rakefile  _config.yml  _quarto.yml  about.html  blog.html  citations.bibtex  courses.html  docusaurus.config.js  example.txt  feed.xml  index.html  markdown-page.html  newsletter.html  notebook2post.sh  package-lock.json  package.json  page.sh  post.sh  publish.sh  pyproject.toml  sitemap.xml
Projects/: Projects.html
blog/: 2022-07-29T18:34:13.162Z-Package-manager-tools-for-Python.md  accelerating-science-with-jax-simulations-physics-and-beyond.html  archive.html  atom.xml  authors.html  authors.yml  building-a-rag-system-with-postgresql-pgvector-sqlalchemy-gemma-gemini-embeddings.html  building-interactive-agentic-applications-using-adk-and-ag-ui-protocol.html  from-single-agent-to-production-ready-multi-agent-architecture-with-adk-mcp-a2a-and-ag-ui.html  getting-started-with-ray-on-google-cloud-platform.html  implementing-anthropic's-agent-design-patterns-with-google-adk.html  improve-rag-systems-reliability-with-citations.html  intro-to-system-design.html  introduction-to-reinforcement-learning.html  package-manager-tools-for-python.html  post-training-gemma-3-for-earth-observation-eo-understanding-a-jax-stack-tpu-pipeline.html  python-environments-with-pyenv-and-poetry.html  python-for-data-science-exploring-the-syntax.html  python-for-data-science-part-1.html  python-for-data-science-part-getting-started.html  rss.xml  tags.html  (+1 more)
css/: main.css  (+1 more)
(+1355 files in other folders)
