[tool.poetry]
name = "haruiz-github-io"
version = "0.1.0"
description = ""
authors = ["haruiz <henryruiz22@gmail.com>"]
readme = "README.md"
packages = [{include = "haruiz"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.0.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
nbformat = "^5.8.0"
pandas = "^2.0.0"
tabulate = "^0.9.0"
prettier = "^0.0.7"
manim = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
